GDB-6990 Fix cluster legend text being cut (#688)
- since the labels are inside an foreignObject with set height, it would not show overflowing text
 - set overflow to visible for foreign objects inside legend

--- a/src/css/clustermanagement.css
+++ b/src/css/clustermanagement.css
@@ -83,12 +83,16 @@ path.link {
   color: black;
 }
 
+.legend-group .label-wrapper {
+  overflow: visible;
+}
+
 .toggle-legend-btn {
   position: absolute;
   bottom: 0;
 }
 
-#legend-nodes-group.hidden {
+.legend-group.hidden {
   visibility: hidden;
 }
 
